@@ -1,6 +1,8 @@
 49.beta - DEVEL
 ==========================
 
+- Popdown the picker and unselect the grid on pausing
+
 49.alpha - June 27, 2025
 ==========================
 
